--- a/stylecss.css
+++ b/stylecss.css
@@ -9,7 +9,7 @@
 body{
     font-family: 'Fruktur', cursive;
     font-size: 1rem;
-    background-color: antiquewhite;
+    background-color: #b06d11;
 }
 
 header
